tests/ui/typeck/issue-87771-ice-assign-assign-to-bool.stderr
error[E0308]: mismatched types
  --> $DIR/issue-87771-ice-assign-assign-to-bool.rs:3:9
   |
LL |     let mut a;
   |         ----- expected due to the type of this binding
LL |     a = a = true;
   |         ^^^^^^^^ expected `bool`, found `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
