tests/ui/typeck/issue-87771-ice-assign-assign-to-bool.rs
fn main() {
    let mut a;
    a = a = true; //~ ERROR mismatched types
}
